--- a/index.html
+++ b/index.html
@@ -39,5 +39,42 @@
     </div>
   </section>
 
+  <section class="feature">
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <p class="feature-title">Peace
+            <br>of Mind<i>.</i>
+          </p>
+          <p class="feature-text">You’re safe with us. The privacy and
+            <br>security of your financial information
+            <br>is our top priority.
+          </p>
+          <a class="more-button" href="#">more <i class="more-arrow fa fa-long-arrow-right"></i></a>
+        </div>
+        <div class="col-4">
+          <p class="feature-title">Free<i>.</i>
+            <br>Actually free
+          </p>
+          <p class="feature-text">No more pricing grids. No more fine
+            <br>print. Sending and receiving cash is
+            <br>free without gimmicks.
+          </p>
+          <a class="more-button" href="#">more <i class="more-arrow fa fa-long-arrow-right"></i></a>
+        </div>
+        <div class="col-4">
+          <p class="feature-title">Simple
+            <br>payments<i>.</i>
+          </p>
+          <p class="feature-text">The same debit card you use to buy
+            <br>coffee lets deposit money straight to
+            <br>your bank account.
+          </p>
+          <a class="more-button" href="#">more <i class="more-arrow fa fa-long-arrow-right"></i></a>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
