--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <a class="logo" href="#"><span>Freelancer</span>.</a>
+          <a class="logo" href="#">Freelancer<i>.</i></a>
           <ul class="menu">
             <li><a href="#" class="menu-item">about</a></li>
             <li><a href="#" class="menu-item">work</a></li>
@@ -31,7 +31,7 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <p class="header-title"><span>intelligence is nothing without ambition</span>.</p>
+          <p class="header-title">intelligence is nothing without ambition<i>.</i></p>
           <p class="header-subtitle">We’re small but impressive creative agency.</p>
           <a class="header-button" href="#">read more</a>
         </div>
@@ -50,7 +50,7 @@
             <br>security of your financial information
             <br>is our top priority.
           </p>
-          <a class="more-button" href="#">more <i class="more-arrow fa fa-long-arrow-right"></i></a>
+          <a class="more-button feature-button" href="#">more <i class="more-arrow fa fa-long-arrow-right"></i></a>
         </div>
         <div class="col-4">
           <p class="feature-title">Free<i>.</i>
@@ -60,7 +60,7 @@
             <br>print. Sending and receiving cash is
             <br>free without gimmicks.
           </p>
-          <a class="more-button" href="#">more <i class="more-arrow fa fa-long-arrow-right"></i></a>
+          <a class="more-button feature-button" href="#">more <i class="more-arrow fa fa-long-arrow-right"></i></a>
         </div>
         <div class="col-4">
           <p class="feature-title">Simple
@@ -70,7 +70,29 @@
             <br>coffee lets deposit money straight to
             <br>your bank account.
           </p>
-          <a class="more-button" href="#">more <i class="more-arrow fa fa-long-arrow-right"></i></a>
+          <a class="more-button feature-button" href="#">more <i class="more-arrow fa fa-long-arrow-right"></i></a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="portfolio">
+    <div class="container">
+      <div class="row">
+        <div class="portfolio-content col-12">
+          <p class="portfolio-title">portfolio<i>.</i></p>
+          <p class="portfolio-subtitle">We are small, but strong team</p>
+          <div class="portfolio-text">
+            <p class="portfolio-paragraph">
+              No more pricing grids. No more fine print.
+              <br>Sending and receiving cash is free without gimmicks.
+            </p>
+            <p class="portfolio-paragraph">
+              The same debit card you use to buy coffee lets
+              <br>deposit money straight to your bank account.
+            </p>
+          </div>
+          <a class="more-button portfolio-button" href="#">more <i class="more-arrow fa fa-long-arrow-right"></i></a>
         </div>
       </div>
     </div>
