--- a/index.html
+++ b/index.html
@@ -98,5 +98,56 @@
     </div>
   </section>
 
+  <section class="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <p class="about-title">our team<i>.</i></p>
+          <p class="about-subtitle">They are big but still friendly.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <img class="about-image" src="images/profile1.png" alt="profile image" />
+          <div class="about-info">
+            <p class="about-name">Joey</p>
+            <p class="about-profession">Web developer</p>
+            <p class="about-text">
+              Coffee lover. Always
+              <br>on bike. iPhone fan.
+            </p>
+          </div>
+        </div>
+        <div class="col-4">
+          <img class="about-image" src="images/profile2.png" alt="profile image" />
+          <div class="about-info">
+            <p class="about-name">Matt</p>
+            <p class="about-profession">Web designer</p>
+            <p class="about-text">
+              MTB Biker. Photoshop
+              <br>Master. Loving Father.
+            </p>
+          </div>
+        </div>
+        <div class="col-4">
+          <img class="about-image" src="images/profile3.png" alt="profile image" />
+          <div class="about-info">
+            <p class="about-name">Mike</p>
+            <p class="about-profession">Copywriter</p>
+            <p class="about-text">
+              Drummer. Soup lover.
+              <br>Beer Drinker. Cyclist.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <a class="more-button about-button" href="#">more <i class="more-arrow fa fa-long-arrow-right"></i></a>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
