--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <li><a href="#" class="menu-item">contact</a></li>
           </ul>
           <div class="header-social">
-            <i class="fa fa-twitter"></i>
-            <i class="fa fa-facebook"></i>
+            <i class="header-social-item fa fa-twitter"></i>
+            <i class="header-social-item fa fa-facebook"></i>
           </div>
         </div>
       </div>
@@ -144,6 +144,22 @@
       <div class="row">
         <div class="col-12">
           <a class="more-button about-button" href="#">more <i class="more-arrow fa fa-long-arrow-right"></i></a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="footer-content col-12">
+          <div class="footer-social">
+            <a href="#" class="footer-socil-item fa fa-twitter"></a>
+            <a href="#" class="footer-socil-item fa fa-linkedin"></a>
+            <a href="#" class="footer-socil-item fa fa-facebook"></a>
+            <a href="#" class="footer-socil-item fa fa-google-plus"></a>
+          </div>
+          <p class="footer-copyright">© Freelancer - Designed by Wojtek Kwiatkowski</p>
         </div>
       </div>
     </div>
